<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:defaultValue="false"
        android:key="tts_enable_preference"
        android:title="@string/tts_prf_enable_title"
        android:summary="@string/tts_prf_enable_summery" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/engine_type_entries"
        android:entryValues="@array/engine_type_values"
        android:key="tts_engine_type_preference"
        android:title="@string/tts_prf_engine_title" />

    <ListPreference
        android:defaultValue="xiaoyan"
        android:entries="@array/voicer_cloud_entries"
        android:entryValues="@array/voicer_cloud_values"
        android:key="tts_voicer_type_preference"
        android:title="@string/tts_prf_voicer_title" />
    <EditTextPreference
        android:dialogTitle="@string/tts_prf_speed_dialog_title"
        android:key="speed_preference"
        android:defaultValue="50"
        android:numeric="integer"
        android:title="@string/tts_prf_speed_title" />
    <EditTextPreference
        android:dialogTitle="@string/tts_prf_pitch_dialog_title"
        android:key="pitch_preference"
        android:defaultValue="50"
        android:numeric="integer"
        android:title="@string/tts_prf_pitch_title" />
    <EditTextPreference
        android:dialogTitle="@string/tts_prf_volume_dialog_title"
        android:key="volume_preference"
        android:defaultValue="50"
        android:numeric="integer"
        android:title="@string/tts_prf_volume_title" />
    <ListPreference
        android:defaultValue="3"
        android:entries="@array/stream_entries"
        android:entryValues="@array/stream_values"
        android:key="stream_preference"
        android:title="@string/tts_prf_stream_title" />

</PreferenceScreen>