<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/retrieve_password_method"
        android:textSize="20dp"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <CheckBox
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:text="@string/email_authentication"
        android:id="@+id/email_authen_checkbox"
        android:paddingStart="10dp"
        android:nestedScrollingEnabled="false"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="18dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_and_answer"
        android:id="@+id/qa_checkbox"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/method_description"
        android:id="@+id/textView2"
        android:textSize="18dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:id="@+id/email_address"
        android:textSize="18dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <EditText
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_address_text"
        android:textSize="18dp"
        android:typeface="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:id="@+id/question"
        android:textSize="18dp"
        android:paddingStart="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"/>

    <EditText
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:id="@+id/question_text"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:id="@+id/answer"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:textSize="18dp"/>

    <EditText
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:id="@+id/answer_text"
        android:textSize="18dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lockpassword_ok_label"
        android:id="@+id/ok_button"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        />

</LinearLayout>
