<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registered_email_address"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailAddressText"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:phoneNumber="true"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:inputType="phone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendEmailButton"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="10dp"
        android:layout_gravity="center"
        android:text="@string/send_sms"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_auth_code"
        android:id="@+id/inputAuthCodeText"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone"/>

    <EditText
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/authCodeText"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:gravity="center"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="24dp"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:id="@+id/okButton"
            android:textSize="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"/>
    </LinearLayout>

</LinearLayout>
