<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5.0dp" >

        <EditText
            android:id="@+id/feedback_content_edit"
            android:layout_width="fill_parent"
            android:layout_height="0.0dp"
            android:layout_weight="0.45"
            android:background="@drawable/feedback_edit_background"
            android:gravity="top"
            android:hint="@string/feedback_hint"
            android:paddingBottom="14.0dp"
            android:paddingLeft="12.0dp"
            android:paddingTop="12.0dp"
            android:singleLine="false"
            android:textColor="#ff333333"
            android:textSize="18.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48.0dp"
            android:orientation="horizontal"
            android:layout_marginTop="10.0dp">

            <TextView
                android:id="@+id/feedback_contact"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="48.0dp"
                android:layout_weight="0.7"
                android:text="@string/contact_title"
                android:textColor="#ff333333"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/feedback_contact_edit"
                android:layout_width="fill_parent"
                android:layout_height="48.0dp"
                android:layout_weight="0.3"
                android:background="@drawable/feedback_edit_background"
                android:gravity="center_vertical"
                android:hint="@string/feedback_contact_hint"
                android:paddingLeft="12.0dp"
                android:paddingRight="12.0dp"
                android:singleLine="true"
                android:textColor="#ff333333"
                android:textSize="18.0sp" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dp"
            android:layout_marginTop="10.0dp"
            android:background="@drawable/btn_start_selector"
            android:padding="10.0dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
    </LinearLayout>

</LinearLayout>